added model for userdata

--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
 		"express-validator": "^6.4.0",
 		"helmet": "^3.23.3",
 		"jsonwebtoken": "^8.5.1",
+		"kafkajs": "^2.1.0",
 		"mongoose": "^5.12.12",
 		"morgan": "^1.10.0",
+		"node-fetch": "^3.2.6",
+		"node-rdkafka": "^2.13.0",
 		"passport": "^0.6.0",
 		"passport-magic": "^1.0.0",
 		"pm2": "^5.1.2",
